# ventamin

./: .gitignore  README.md  __init__.py  analyse.ipynb  analyse_text.ipynb  config.py  facebook_ad_scraper.py  main.py  pyproject.toml  requirements.txt  run_scraper.py  setup.py  test.py
ad_data/: scraping_summary_20250717_024328.json  scraping_summary_20250717_030021.json  scraping_summary_20250717_180056.json  top_performing_ads_20250717_024328.csv  top_performing_ads_20250717_024328.json  top_performing_ads_20250717_030021.csv  top_performing_ads_20250717_030021.json  top_performing_ads_20250717_180056.csv  top_performing_ads_20250717_180056.json
analysis/: COMPETITOR_AD_ANALYSIS_REPORT.md  __init__.py  simple_media_analysis.py
api/: __init__.py  api_examples.md  main.py
media_analysis_output/: media_analysis_results.json
scraping/: __init__.py  facebook_ad_scraper.py  run_scraper.py
ventamin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
