[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ventamin"
version = "1.0.0"
description = "A comprehensive tool for scraping and analyzing competitor ads from Facebook Ad Library"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Ventamin Team"},
]
keywords = ["facebook", "ads", "scraping", "competitor", "analysis", "marketing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "selenium==4.15.0",
    "pandas==2.1.3",
    "requests==2.31.0",
    "Pillow==10.1.0",
    "matplotlib==3.8.2",
    "seaborn==0.13.0",
    "beautifulsoup4==4.12.2",
    "numpy==1.25.2",
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "pydantic==2.5.0",
]

[project.scripts]
ventamin-api = "api.main:main"
ventamin-scraper = "scraping.run_scraper:main"

[project.urls]
Homepage = "https://github.com/ventamin/ventamin"
Repository = "https://github.com/ventamin/ventamin.git"
Issues = "https://github.com/ventamin/ventamin/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "venv*", "*.egg-info*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.json"] 